auto-test/tests/chapter_18/valid/params_and_returns/return_pointer_in_rax.c







struct s {
    long l1;
    long l2;
    long l3;
};


struct s return_in_mem(void) {
    struct s result = {1, 2, 3};
    return result;
}