auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_struct_conditional.c
struct s;

extern struct s v1;
extern struct s v2;

int main(void) {
  
  1 ? v1 : v2;
}